# kannaka-quantum

./: .gitattributes  .gitignore  .mcp.json  README.md  pyproject.toml
.claude-plugin/: plugin.json
.github/workflows/: bench.yml  ci.yml  marketplace-cascade.yml
bench/: LEDGER.md  README.md  baseline.json  corpus.json
bench/results/hw/: rigetti-cepheus-2026-07-01.json
bench/results/sim/: 2026-07-01.json  2026-07-06.json  2026-07-13.json  2026-07-20.json
docs/: adr-0001-remote-agent-surface.md  genuine-vs-phantom-entanglement.md  quantum-wave-roadmap.md  recall-is-amplitude-amplification.md
examples/: resonance_recall_demo.py
kannaka_quantum/: __init__.py  bell.py  bench.py  cli.py  core.py  entropy.py  lab.py  lab_bootstrap.py  mcp_server.py  qos_bridge.py  qubo.py  ssh_bridge.py
scripts/: ephemeral-node-lifecycle.sh  lab-testbed-build.sh
skills/kannaka-quantum/: SKILL.md
tests/: test_bell.py  test_bench.py  test_core.py  test_entropy.py  test_lab.py  test_lab_bootstrap.py  test_qos_bridge.py  test_qubo.py  test_security.py
tests/qubo/: adr-example.json  anticorrelated.json  budget-fold.json  frustrated-triangle.json
