[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kannaka-quantum"
version = "0.2.10"
description = "Real quantum + qBraid Lab infrastructure capabilities for Kannaka via qBraid (free simulator) and OpenQuantum (real QPUs) — a CLI bridge for the coding agent and an MCP server for any agent."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["quantum", "qbraid", "openquantum", "kannaka", "mcp", "agent", "qiskit", "compute", "lab"]
dependencies = [
    "qbraid>=0.9",
    "qbraid-core>=0.3",
    "qiskit>=1.0",
    "numpy>=1.23",
    "mcp>=1.0",
    "openquantum-sdk>=0.3",
]

[project.optional-dependencies]
# qBraid environment/kernel tools import the environments service, which pulls
# in Jupyter's kernelspec manager. Compute/credit/profile tools do NOT need it.
lab = ["jupyter-client>=8"]
# Lint + test only — nothing heavyweight. This is what CI installs.
dev = ["pytest>=8", "ruff>=0.5"]

[project.urls]
Homepage = "https://github.com/NickFlach/kannaka-quantum"

[project.scripts]
kannaka-quantum = "kannaka_quantum.cli:main"

[tool.setuptools.packages.find]
include = ["kannaka_quantum*"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
